--- a/syllabus.tex
+++ b/syllabus.tex
@@ -306,6 +306,7 @@ ECON 550, ECON 551
     \item ``Understanding the average impact of microcredit expansions: A bayesian hierarchical analysis of seven randomized experiments'' Meager (2019)
     \item ``Investing for the Long Run when Returns Are Predictable.'' Barberis (2000)
     \item ``Is there a replication crisis in finance?'' Jensen, Kelly and Pedersen (2021)
+      \item ``SI 2022 Methods Lectures - Empirical Bayes Methods, Theory and Application'', Gu and Walters (2022) \url{https://www.nber.org/conferences/si-2022-methods-lectures-empirical-bayes-methods-theory-and-application}
     \end{itemize}
   \end{enumerate}
 \item  \underline{Canonical Research Designs}
