--- a/lectures/15_iv_partI.tex
+++ b/lectures/15_iv_partI.tex
@@ -487,10 +487,10 @@
 
 \begin{frame}{Structural version of instruments - GMM and 2SLS}
   \begin{wideitemize}
-  \item This approach is highly focusing on a parameteric
-    specification, but notably the important assumption is that
-    $E(\epsilon_{i}Z_{i}) = 0$ and $E(D_{i}Z_{i}) \not=0$. Note that
-    this is much weaker than random assignment!
+  \item This approach is focusing on a parameteric specification, but
+    the important assumption is that $E(\epsilon_{i}Z_{i}) = 0$ and
+    $E(D_{i}Z_{i}) \not=0$. Note that this is much weaker than random
+    assignment!
   \item But, it is kind of wonky to assume mean independence and not
     assume full independence
   \item Why? Well, consider transforming the outcome $Y$ by taking a
@@ -706,7 +706,7 @@
     \begin{itemize}
     \item   but a remarkably strong assumption in some places!
     \end{itemize}
-  \item If it fails, it doesn't mean that there isn't a csaul effect
+  \item If it fails, it doesn't mean that there isn't a causal effect
     identified, but researchers should be careful
     \begin{itemize}
     \item Next class, will discuss sensitivities and other issues
